@@ -12,6 +12,8 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -20,9 +22,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
 
 @RequiredArgsConstructor
 @RestController
@@ -38,6 +38,8 @@ public class FileController {
 
     private final IFileService service;
 
+    private final ResourceLoader resourceLoader;
+
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "When read successful and return object",
                     content = @Content(schema = @Schema(implementation = FileClassResponseDTO.class))),
@@ -50,7 +52,7 @@ public class FileController {
     @Secured({CREATE, FULL_ACCESS})
     public ResponseEntity<?> readFile(@RequestParam("file") MultipartFile file) throws IOException {
         String fileName = file.getOriginalFilename();
-        String fileFormat = fileName.split(".")[1];
+        String fileFormat = fileName.split("\\.")[1];
         if(!fileFormat.equals("csv")){
             throw new FileFormatException("File doesn't .csv format!");
         }
@@ -61,8 +63,13 @@ public class FileController {
     @GetMapping("/download/class-format")
     @Secured({CREATE, FULL_ACCESS})
     public ResponseEntity<?> downClassFormatFile() throws IOException {
-        Path path = Paths.get("file-format", "create-class-format.csv");
-        byte[] buffer = Files.readAllBytes(path);
+//        Path path = Paths.get("file-format", "create-class-format.csv");
+//        byte[] buffer = Files.readAllBytes(path);
+
+        Resource fileResource = resourceLoader.getResource("classpath:" + "file-format/create-class-format.csv");
+        InputStream inputStream = fileResource.getInputStream();
+        byte[] buffer = inputStream.readAllBytes();
+
         ByteArrayResource resource = new ByteArrayResource(buffer);
         HttpHeaders headers = new HttpHeaders();
         headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=create-class-format.csv");
